SubBt/force-app/main/default/objects/Budget_Item__c/Budget_Item__c.object-meta.xml
<CustomObject>
    <description>This object is used to create the Budget item</description>
    <label>Budget Line</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budget Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>