SubBt/force-app/main/default/objects/Budget_Item__c/fields/Additional_Costs__c.field-meta.xml
<CustomField>
    <fullName>Additional_Costs__c</fullName>
    <formula>Expense_Amount__c</formula>
    <inlineHelpText>Sum of Expenses.</inlineHelpText>
    <label>Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>