SubBt/force-app/main/default/objects/Budget_Item__c/fields/Amount_In__c.field-meta.xml
<CustomField>
    <fullName>Amount_In__c</fullName>
    <description>This is the contingency amount added from another budget line.</description>
    <inlineHelpText>This is the contingency amount added from another budget line.</inlineHelpText>
    <label>Amount In</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>