SubBt/force-app/main/default/objects/Budget_Item__c/fields/Amount_Out_2__c.field-meta.xml
<CustomField>
    <fullName>Amount_Out_2__c</fullName>
    <description>This is the contingency amount reduced from this budget line.</description>
    <inlineHelpText>This is the contingency amount reduced from this budget line.</inlineHelpText>
    <label>Amount Out</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>