SubBt/force-app/main/default/objects/Budget_Item__c/fields/Amount_Out__c.field-meta.xml
<CustomField>
    <fullName>Amount_Out__c</fullName>
    <description>This is the Amount which transferred from this budget item to other budge item</description>
    <inlineHelpText>This is the Amount which transferred from this budget item to other budge item</inlineHelpText>
    <label>Amount Out (DEP)</label>
    <summarizedField>Budget_Modifications__c.Amount__c</summarizedField>
    <summaryForeignKey>Budget_Modifications__c.From__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>