SubBt/force-app/main/default/objects/Budget_Item__c/fields/Approved_CO__c.field-meta.xml
<CustomField>
    <fullName>Approved_CO__c</fullName>
    <description>Sum of Approved CO</description>
    <label>Appr. CO</label>
    <summarizedField>CO_Item_To_Budget_Item_Link__c.Approved_CO__c</summarizedField>
    <summaryForeignKey>CO_Item_To_Budget_Item_Link__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>