SubBt/force-app/main/default/objects/Budget_Item__c/fields/Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Number__c</fullName>
    <description>Auto Number generated by the system</description>
    <displayFormat>BI - {000000}</displayFormat>
    <label>Budget Item #</label>
    <type>AutoNumber</type>
</CustomField>