SubBt/force-app/main/default/objects/Budget_Item__c/fields/Base_Sq_Feet__c.field-meta.xml
<CustomField>
    <fullName>Base_Sq_Feet__c</fullName>
    <label>Base Sq. Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>