SubBt/force-app/main/default/objects/Budget_Item__c/fields/Bought_Out__c.field-meta.xml
<CustomField>
    <fullName>Bought_Out__c</fullName>
    <formula>IF ( Total_Costs__c  =0,0,( Total_Costs__c / Original_Budget__c  ))
/*IF (buildertek__Committed_Costs__c =0,0,(buildertek__Committed_Costs__c/ buildertek__Original_Budget__c  ))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Costs divided by Original Budget</inlineHelpText>
    <label>Bought Out %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>