SubBt/force-app/main/default/objects/Budget_Item__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <description>This field will indicate the related budget</description>
    <inlineHelpText>This is the related budget</inlineHelpText>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipName>Budget_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>