SubBt/force-app/main/default/objects/Budget_Item__c/fields/Budget_Line_Group__c.field-meta.xml
<CustomField>
    <fullName>Budget_Line_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grouping (Dep)</label>
    <referenceTo>Quote_Line_Group__c</referenceTo>
    <relationshipLabel>Budget Lines</relationshipLabel>
    <relationshipName>Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>