SubBt/force-app/main/default/objects/Budget_Item__c/fields/Budget_Modification__c.field-meta.xml
<CustomField>
    <fullName>Budget_Modification__c</fullName>
    <description>This is populated from Contingency movements.</description>
    <formula>Amount_In__c -  Amount_Out_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is populated from Contingency movements.</inlineHelpText>
    <label>Budget Mod&apos;s</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>