SubBt/force-app/main/default/objects/Budget_Item__c/fields/Committed_Costs__c.field-meta.xml
<CustomField>
    <fullName>Committed_Costs__c</fullName>
    <description>Sum of all Approved PO</description>
    <inlineHelpText>Sum of all Approved PO&apos;s</inlineHelpText>
    <label>Committed Costs</label>
    <summarizedField>PO_Item_To_Budget_Item_Link__c.Approved_PO__c</summarizedField>
    <summaryForeignKey>PO_Item_To_Budget_Item_Link__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>