SubBt/force-app/main/default/objects/Budget_Item__c/fields/Complete__c.field-meta.xml
<CustomField>
    <fullName>Complete__c</fullName>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>