SubBt/force-app/main/default/objects/Budget_Item__c/fields/Contingency__c.field-meta.xml
<CustomField>
    <fullName>Contingency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This checkbox identifies Budget Line Items that are Contingency lines.  By checking this box, you are indicating that this Budget Line Item is available for adding and subtracting dollar amounts.</inlineHelpText>
    <label>Contingency</label>
    <type>Checkbox</type>
</CustomField>