SubBt/force-app/main/default/objects/Budget_Item__c/fields/Contractor__c.field-meta.xml
<CustomField>
    <fullName>Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field is used to identify the Contractor Account that is assigned to the Task.</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget Lines</relationshipLabel>
    <relationshipName>Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>