SubBt/force-app/main/default/objects/Budget_Item__c/fields/Cost_Code__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Cost Codes allows you to assign Costs to a particular Code that can be used to tie back to your Accounting Package.</description>
    <inlineHelpText>Cost Codes allows you to assign Costs to a particular Code that can be used to tie back to your Accounting Package.</inlineHelpText>
    <label>Cost Code</label>
    <referenceTo>Cost_Codes__c</referenceTo>
    <relationshipName>Budget_Items</relationshipName>
    <type>Lookup</type>
</CustomField>