SubBt/force-app/main/default/objects/Budget_Item__c/fields/Cost_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>Cost_Code_Name__c</fullName>
    <formula>Cost_Code__r.Cost_Code_Name__c</formula>
    <label>Cost Code Name</label>
    <type>Text</type>
</CustomField>