SubBt/force-app/main/default/objects/Budget_Item__c/fields/Cost_P__c.field-meta.xml
<CustomField>
    <fullName>Cost_P__c</fullName>
    <formula>Original_Budget__c /  Budget__r.Project__r.Total_Sq_Feet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost/SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>