SubBt/force-app/main/default/objects/Budget_Item__c/fields/Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Cost_Type__c</fullName>
    <label>Cost Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Subcontract</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>