SubBt/force-app/main/default/objects/Budget_Item__c/fields/CostCodeDivision__c.field-meta.xml
<CustomField>
    <fullName>CostCodeDivision__c</fullName>
    <formula>TEXT(Cost_Code__r.Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost Code Division</label>
    <type>Text</type>
</CustomField>