SubBt/force-app/main/default/objects/Budget_Item__c/fields/Eligible_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Amount__c</fullName>
    <label>Eligible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>