SubBt/force-app/main/default/objects/Budget_Item__c/fields/Eligible_Contingency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Contingency_Amount__c</fullName>
    <formula>Revised_Budget__c -  (Committed_Costs__c +  Budget_Modification__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the popup.</inlineHelpText>
    <label>Eligible Contingency Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>