SubBt/force-app/main/default/objects/Budget_Item__c/fields/Estimated_Cost_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Cost_To_Complete__c</fullName>
    <formula>/*buildertek__Total_Costs__c +  buildertek__Forecast_To_Complete__c*/

 Projected_Costs__c +  Forecast_To_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Projected Costs + Forecasted To Complete</inlineHelpText>
    <label>Est. Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>