SubBt/force-app/main/default/objects/Budget_Item__c/fields/Expense_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expense_Amount__c</fullName>
    <label>Expense Amount</label>
    <summarizedField>Expense_To_Budget_Item_Link__c.Amount__c</summarizedField>
    <summaryForeignKey>Expense_To_Budget_Item_Link__c.Budget_Line__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>