SubBt/force-app/main/default/objects/Budget_Item__c/fields/Forecast_To_Complete__c.field-meta.xml
<CustomField>
    <fullName>Forecast_To_Complete__c</fullName>
    <inlineHelpText>Anticipated Cost to Complete.  This number is not included in the Total Cost number.</inlineHelpText>
    <label>C2C</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>