SubBt/force-app/main/default/objects/Budget_Item__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <formula>/*buildertek__Sales_Price__c- buildertek__Total_Costs__c*/

 Total_Sales_Price__c -  Total_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Profit</inlineHelpText>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>