SubBt/force-app/main/default/objects/Budget_Item__c/fields/Gross_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Margin__c</fullName>
    <formula>IF(Total_Sales_Price__c=0,0,Gross_Profit__c /  Total_Sales_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Profit Margin Percentage</inlineHelpText>
    <label>Gross Profit Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>