SubBt/force-app/main/default/objects/Budget_Item__c/fields/Gross_Profit_Percemtage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Percemtage__c</fullName>
    <formula>/*(buildertek__Total_Sales_Price__c -  buildertek__Total_Costs__c) / buildertek__Total_Costs__c*/

IF(Total_Sales_Price__c=0,0,((Total_Sales_Price__c -  Total_Costs__c) / Total_Costs__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Gross Profit Percentage</inlineHelpText>
    <label>Markup (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>