SubBt/force-app/main/default/objects/Budget_Item__c/fields/Invoice_total__c.field-meta.xml
<CustomField>
    <fullName>Invoice_total__c</fullName>
    <inlineHelpText>Sum of all Invoices for the Budget Line.</inlineHelpText>
    <label>Invoices</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>