SubBt/force-app/main/default/objects/Budget_Item__c/fields/Labor1__c.field-meta.xml
<CustomField>
    <fullName>Labor1__c</fullName>
    <description>Sum of all Time Card entries for the Budget Line.</description>
    <formula>Labor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is an accumulated amount across all Times Cards associated with this Budget Line.</inlineHelpText>
    <label>Labor (Accum)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>