SubBt/force-app/main/default/objects/Budget_Item__c/fields/Labor__c.field-meta.xml
<CustomField>
    <fullName>Labor__c</fullName>
    <description>Sum of all Time Card entries for the Budget Line.</description>
    <inlineHelpText>This is a manually entered value.  Use this field when you are associating Time Cards with your Budget Lines.</inlineHelpText>
    <label>Labor (Standard)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>