SubBt/force-app/main/default/objects/Budget_Item__c/fields/Old_Budget_Line__c.field-meta.xml
<CustomField>
    <fullName>Old_Budget_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Budget Line</label>
    <referenceTo>Budget_Item__c</referenceTo>
    <relationshipLabel>Budget Lines</relationshipLabel>
    <relationshipName>Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>