SubBt/force-app/main/default/objects/Budget_Item__c/fields/Original_Budget__c.field-meta.xml
<CustomField>
    <fullName>Original_Budget__c</fullName>
    <description>This is the Original Budget Amount (Unit Cost * Quantity)</description>
    <formula>((Quantity__c  *  Unit_Price__c) +  Budget_Modification__c)+ Regional_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the Original Budget Amount (Unit Cost * Quantity)</inlineHelpText>
    <label>Orig. Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>