SubBt/force-app/main/default/objects/Budget_Item__c/fields/Pending_CO__c.field-meta.xml
<CustomField>
    <fullName>Pending_CO__c</fullName>
    <description>Sum of All pending CO</description>
    <label>Pending CO</label>
    <summarizedField>CO_Item_To_Budget_Item_Link__c.Pending_CO__c</summarizedField>
    <summaryForeignKey>CO_Item_To_Budget_Item_Link__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>