SubBt/force-app/main/default/objects/Budget_Item__c/fields/Pending_Cost_Changes__c.field-meta.xml
<CustomField>
    <fullName>Pending_Cost_Changes__c</fullName>
    <description>Pending Cost Changes - Sum of all pending PO</description>
    <inlineHelpText>Pending Cost Changes - Sum of all pending PO</inlineHelpText>
    <label>Pending PO&apos;s</label>
    <summarizedField>PO_Item_To_Budget_Item_Link__c.Pending_PO__c</summarizedField>
    <summaryForeignKey>PO_Item_To_Budget_Item_Link__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>