SubBt/force-app/main/default/objects/Budget_Item__c/fields/Pending_Costs__c.field-meta.xml
<CustomField>
    <fullName>Pending_Costs__c</fullName>
    <description>Sum of all Pending PO&apos;s</description>
    <inlineHelpText>Sum of all Pending PO&apos;s</inlineHelpText>
    <label>Pending Committed Costs</label>
    <summarizedField>PO_Item_To_Budget_Item_Link__c.Pending_PO__c</summarizedField>
    <summaryForeignKey>PO_Item_To_Budget_Item_Link__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>