SubBt/force-app/main/default/objects/Budget_Item__c/fields/Previously_Billed__c.field-meta.xml
<CustomField>
    <fullName>Previously_Billed__c</fullName>
    <label>Previously Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>