SubBt/force-app/main/default/objects/Budget_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>