SubBt/force-app/main/default/objects/Budget_Item__c/fields/Profit_Loss__c.field-meta.xml
<CustomField>
    <fullName>Profit_Loss__c</fullName>
    <formula>/*buildertek__Estimated_Cost_To_Complete__c - buildertek__Projected_Budget__c*/
 Total_Costs__c  - Projected_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Projected Budget - Total Costs</inlineHelpText>
    <label>Over/Under</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>