SubBt/force-app/main/default/objects/Budget_Item__c/fields/Projected_Budget__c.field-meta.xml
<CustomField>
    <fullName>Projected_Budget__c</fullName>
    <formula>Revised_Budget__c +  Pending_CO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revised Budget + Pending CO&apos;s</inlineHelpText>
    <label>Proj. Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>