SubBt/force-app/main/default/objects/Budget_Item__c/fields/Projected_Costs__c.field-meta.xml
<CustomField>
    <fullName>Projected_Costs__c</fullName>
    <formula>/*buildertek__Committed_Costs__c  +  buildertek__Direct_Costs__c  +  buildertek__Pending_Cost_Changes__c*/

Committed_Costs__c  + Pending_Cost_Changes__c + Additional_Costs__c +  Forecast_To_Complete__c +  Labor__c +  Invoice_total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Committed Costs +  Direct Costs +  Pending Committed Costs</inlineHelpText>
    <label>Proj. Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>