SubBt/force-app/main/default/objects/Budget_Item__c/fields/Projected_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Projected_Gross_Profit__c</fullName>
    <formula>Proj_Profit_Loss__c  /  Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proj. Gross Profit %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>