SubBt/force-app/main/default/objects/Budget_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Quantity of budget item</description>
    <inlineHelpText>Quantity of budget item</inlineHelpText>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>