SubBt/force-app/main/default/objects/Budget_Item__c/fields/Revised_Budget__c.field-meta.xml
<CustomField>
    <fullName>Revised_Budget__c</fullName>
    <formula>Original_Budget__c +   Total_Approvals_CO__c +  Upgrades__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Original Budget + Approved CO&apos;s + Budget Modifications</inlineHelpText>
    <label>Rev. Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>