SubBt/force-app/main/default/objects/Budget_Item__c/fields/Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Sales_Price__c</fullName>
    <inlineHelpText>Sales Price from the Original Contract.</inlineHelpText>
    <label>Unit Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>