SubBt/force-app/main/default/objects/Budget_Item__c/fields/Sub_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group_Name__c</fullName>
    <formula>Sub_Grouping__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Group Name</label>
    <type>Text</type>
</CustomField>