SubBt/force-app/main/default/objects/Budget_Item__c/fields/Sub_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Sub_Grouping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Grouping</label>
    <referenceTo>Budget_Line_Sub_Group__c</referenceTo>
    <relationshipLabel>Budget Lines</relationshipLabel>
    <relationshipName>Budget_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>