SubBt/force-app/main/default/objects/Budget_Item__c/fields/Total_CO__c.field-meta.xml
<CustomField>
    <fullName>Total_CO__c</fullName>
    <description>Change order amount which is related to this budget item</description>
    <inlineHelpText>Change order amount which is related to this budget item</inlineHelpText>
    <label>Total CO</label>
    <summarizedField>CO_Item_To_Budget_Item_Link__c.Total_CO_Amount__c</summarizedField>
    <summaryForeignKey>CO_Item_To_Budget_Item_Link__c.Budget_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>