SubBt/force-app/main/default/objects/Budget_Item__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <formula>Original_Budget__c /   Budget__r.Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost %</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>