SubBt/force-app/main/default/objects/Budget_Item__c/fields/Total_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Price__c</fullName>
    <formula>Quantity__c *  Sales_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Sales Price * Quantity</inlineHelpText>
    <label>Total Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>