SubBt/force-app/main/default/objects/Budget_Item__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <description>This is the Unit Cost of the item.</description>
    <inlineHelpText>This is the Unit Cost of the item.</inlineHelpText>
    <label>Unit Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>