SubBt/force-app/main/default/objects/Budget_Item__c/fields/Upgrades__c.field-meta.xml
<CustomField>
    <fullName>Upgrades__c</fullName>
    <label>Upgrades</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>