SubBt/force-app/main/default/objects/Budget_Item__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <formula>Revised_Budget__c -  Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Variance between revised budget and original budget.</inlineHelpText>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>