SubBt/force-app/main/default/objects/Budget_Item__c/fields/Variance_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Variance_Percentage__c</fullName>
    <formula>Variance__c /  Original_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Variance / Original Budget</inlineHelpText>
    <label>Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>