SubBt/force-app/main/default/objects/Budget_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Auto_Number1__c</columns>
    <columns>Auto_Number__c</columns>
    <columns>NAME</columns>
    <columns>Cost_Code__c</columns>
    <columns>Quantity__c</columns>
    <columns>Unit_Price__c</columns>
    <columns>UOM__c</columns>
    <columns>Total_Costs__c</columns>
    <columns>Group__c</columns>
    <columns>Trade_Type__c</columns>
    <columns>Contractor__c</columns>
    <columns>Budget__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>